--- a/test/test-page.html
+++ b/test/test-page.html
@@ -4,8 +4,8 @@
   <title>ngTagsInput Test Page</title>
   <script type="text/javascript" src="lib/angular.js"></script>
   <script type="text/javascript" src="lib/ng-stats.min.js"></script>
-  <script type="text/javascript" src="../build/ng-tags-input.js"></script>
-  <link rel="stylesheet" href="../build/ng-tags-input.css"/>
+  <script type="text/javascript" src="../build/cm-tags-input.js"></script>
+  <link rel="stylesheet" href="../build/cm-tags-input.css"/>
 
   <style>
     .stats {
@@ -23,9 +23,9 @@
 </head>
 
 <body ng-controller="Ctrl">
-  <tags-input ng-model="tags" add-on-blur="false" ng-focus="focus()" ng-blur="blur()" add-on-paste="true" paste-split-pattern="[,;|]" spellcheck="false" display-property="name" template="tag-template">
-      <auto-complete source="loadItems($query)" min-length="1" load-on-down-arrow="true" load-on-focus="true" load-on-empty="true" template="autocomplete-template"></auto-complete>
-  </tags-input>
+  <cm-tags-input ng-model="tags" add-on-blur="false" ng-focus="focus()" ng-blur="blur()" add-on-paste="true" paste-split-pattern="[,;|]" spellcheck="false" display-property="name" template="tag-template">
+      <cm-auto-complete source="loadItems($query)" min-length="1" load-on-down-arrow="true" load-on-focus="true" load-on-empty="true" template="autocomplete-template"></cm-auto-complete>
+  </cm-tags-input>
 
   <script type="text/ng-template" id="tag-template">
     <div style="float: left;">
@@ -58,7 +58,7 @@
   </div>
 
   <script type="text/javascript">
-    angular.module('app', ['ngTagsInput', 'angularStats'])
+    angular.module('app', ['cmTagsInput', 'angularStats'])
         .controller('Ctrl', function($scope) {
             var superheroes = [
               {
@@ -123,12 +123,12 @@
             }
           };
         })
-        .config(function(tagsInputConfigProvider) {
-            tagsInputConfigProvider
-              .setDefaults('tagsInput', {
+        .config(function(cmTagsInputConfigProvider) {
+            cmTagsInputConfigProvider
+              .setDefaults('cmTagsInput', {
                 placeholder: 'New tag'
               })
-              .setDefaults('autoComplete', {
+              .setDefaults('cmAutoComplete', {
                 highlightMatchedText: true
               });
         });
